Majoffre/add fzf handlers (#102)
* Expose tree feature in the swagger

* Add fuzzy search API endpoint and related functionality

- Introduced a new endpoint `/filesystem-search` for performing fuzzy searches on filesystem paths.
- Implemented request and response structures for fuzzy search, including parameters for query, file inclusion, directory inclusion, and result limits.
- Integrated fuzzy matching algorithm using the `fzf` library for efficient search results.
- Added performance benchmarks for the fuzzy search API compared to traditional `find` and `grep` commands.
- Updated Go module dependencies to include necessary libraries for fuzzy search functionality.

* WIP

* WIP - Fix find

* WIP - Grep optims

* WIP - Optimization

* Add more optimization

* Refactors and updates dependencies.

Removes the context lines parameter from the fuzzy search endpoint, simplifying the API.

Updates Go dependencies, including security-related packages like `golang.org/x/crypto` and `golang.org/x/net`.

Switches to `jsoniter` consistently across all handler files, improving JSON handling performance and consistency.

The `SetupRouter` function now takes a boolean `disableRequestLogging` instead of a variadic one. This change simplifies the function signature and makes the intent clearer.

Fixes: Potential issues arising from outdated dependencies.

---------
